CharactersRelationships Name Overlap Click Fix

--- a/front-end/src/pages/Characters/CharactersRelationships/Chart/CharactersRelationshipChartCharacterItem/CharactersRelationshipChartCharacterItem.css
+++ b/front-end/src/pages/Characters/CharactersRelationships/Chart/CharactersRelationshipChartCharacterItem/CharactersRelationshipChartCharacterItem.css
@@ -2,6 +2,7 @@
 	position: absolute;
 	width: var(--charactersRelationshipChartItemWidth);
 	height: calc(var(--charactersRelationshipChartItemWidth) + 18px);
+	pointer-events: none;
 }
 
 .characters-relationship-chart-character-item:hover,
@@ -18,6 +19,7 @@
 	height: calc(var(--charactersRelationshipChartItemWidth) - 6px);
 
 	background: var(--grey3);
+	pointer-events: all;
 }
 
 .characters-relationship-chart-character-item-active .characters-relationship-chart-character-item-face-image {
